# AI-Tools

.devcontainer/: devcontainer.json
ai-email-summerizer/: .gitignore  README.md  pyproject.toml  streamlit_app.py
ai-email-summerizer/.github/workflows/: ci.yml
ai-email-summerizer/app/: api.py  demo.py  main.py  models.py
ai-email-summerizer/app/ai/: client.py  prompts.py  provider.py
ai-email-summerizer/app/services/: summarizer.py
ai-email-summerizer/evaluation_data/: email_cases.json
ai-email-summerizer/tests/: test_ai_quality.py  test_email_summarizer.py  test_summarizer_mock.py
